--- a/app/views/first_page_templates/index.html.erb
+++ b/app/views/first_page_templates/index.html.erb
@@ -1,4 +1,66 @@
-<h1>Hello, world!</h1>
+<html> 
+<head> <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"></head>
 
-<div>
-</div>
+
+<body>  
+<div><h1>Welcome to the Coffee Consumption Tracker App!</h1></div>
+
+<img src="https://media.istockphoto.com/photos/aerial-view-of-various-coffee-picture-id938993594?k=6&m=938993594&s=612x612&w=0&h=AMuuDGZ4EHwB0OhL8sJ4WNGbz98wZX1NOg5ZLdxSv9E=">
+
+<p> Up to 90% of adult Americans consume caffeine every day. Most commonly, the caffeine is in coffee. Caffeine provides many health benefits such as: </p>
+<ul>
+    <li> Increased memory</li>
+    <li> Enhanced post-workout muscle pain relief </li>
+    <li> Protection against type 2 diabetes, Parkinson's disease, cardiovascular disease and stroke </li>
+</ul>
+<p> However, excessive caffeine consumption may also cause anxiety, insomnia or digestive problems. Consequently, doctors recommend a moderate consumption.</p>
+<table>
+    <tr> 
+    <td colspan = 2>Caffeine Levels</td>
+    </tr>
+    
+    <tr> 
+    <td>Safe</td>
+    <td colspan = 2>In miligrams</td>
+    <td>Danger</td>
+    </tr>
+    
+    <tr> 
+    <td><i class="far fa-laugh-squint"></i></td>
+    <td><i class="far fa-smile-beam"></td>
+    <td><i class="far fa-frown-open"></i></td>
+    <td><i class="far fa-dizzy"></i></td>
+    </tr>
+    
+    <tr> 
+    <td>100</td>
+    <td>300</td>
+    <td>500</td>
+    <td>600+</td>
+    </tr>
+    
+    <tr> 
+    <td>Low</td>
+    <td>Moderate</td>
+    <td>High</td>
+    <td>Extreme</td>
+    </tr>
+</table>
+<div>From:<a href="http://caffeineandyou.com/caffeine-toxicity/">Caffeine and You</a></div>
+
+
+<p> Tracking anything is hard. It’s easy to forget to do and an interruption of the thing you’re trying to track. As a result, entering data is often sporadic or abandoned entirely. This App provides a fast and easy way to stay on top of your caffeine consumption. The App enable you to:</p>
+
+    <li> Calcualte caffeine consumption</li>
+    <li> Record your favorite drinks </li>
+    <li> Customize your drink record </li>
+
+
+<div><p>Lets get started!</p> </div>
+
+#BUTTONS HERE
+</body>
+</html>
+
+
+
