--- a/app/views/result_templates/calc_result.html.erb
+++ b/app/views/result_templates/calc_result.html.erb
@@ -8,3 +8,5 @@
 </dl>
 
 # ADD AN IF THAT DISPLAYS MESSAGE BASED ON FINAL NUMBER 
+
+#ADD A LINK INSTEAD TO CALCULATE A NEW INPUT AND SENDS YOU TO THE NEW 
