--- a/app/views/form_templates/calc_caffeine.html.erb
+++ b/app/views/form_templates/calc_caffeine.html.erb
@@ -1,19 +1,56 @@
 <h1> Caffeine Intake Calculation</h1>
 
-#ADD DROPDOWN
+<form action= "/calcresult"> 
+<p> 
+    <label for="chain_dropdown">Coffee chain</label>
+    <select id="chain_dropdown" name="coffee_chain">
+        
+        <option value="1">Starbucks</option>
+        <option value="2">McDonald's</option>
+        <option value="3">Dunkin Donuts</option>
+        <option value="4">Costa Coffee</option>
+        <option value="5">Intelligentsia</option>
+         
+        </option>
+    
+    </select>
+<p> 
+    <label for="size_dropdown">Size</label>
+    <select id="size_dropdown" name="size">
+         <option value="1">Short</option>
+         <option value="2">Tall</option>
+         <option value="3">Grande</option>
+         <option value="4">Venti</option>
+         <option value="5">One Shot</option>
+         <option value="6">Two Shot</option>
+         <option value="7">Three Shot</option>
+         <option value="8">Small</option>
+         <option value="9">Medium</option>
+         <option value="10">Large</option>
+         <option value="11">Extra Large</option>
+         <option value="12">Primo</option>
+         <option value="13">Medio</option>
+         <option value="13">Massimo</option>
+        </option>
+    
+    </select>
+<p> 
+    <label for="drink_dropdown">Drink</label>
+    <select id="drink_dropdown" name="drink">
+                
+            <option value="1">Caffeinated coffee</option>
+            <option value="2">Expresso</option>
+            <option value="3">Decaf</option>
+            <option value="4">Latte</option>
+            <option value="5">Cappuccino</option>
+            <option value="4">Flat White</option>
+            <option value="5">Cortado</option>
+         
+        </option>
+    
+    </select>
 
-<form> 
-<p> 
-    <label for="chain">Coffee chain</label>
-    <input id= "chain" type= "text" name= "coffee_chain" </p>
-<p> 
-    <label for="drink">Type of drink </label>
-    <input id= "drink" type= "text" name= "drink" </p>
-<p> 
-    <label for="size">Size </label>
-    <input id= "size" type= "text" name= "size" </p>
-
-<p><form action= "/calcresult">
+<p><form>
     <button>Record Consumption</button></p>
 </form>
 
