--- a/app/views/result_templates/calc_result.html.erb
+++ b/app/views/result_templates/calc_result.html.erb
@@ -2,25 +2,25 @@
 
 <div><p> You have consumed a <%= @drink_type%> coffee from <%= @coffee_chain%> of <%= @size%> size, which has <%= @caf_amount%> caffeine milligrams </p></div>
 
-<% if <% @caf_amount%> >=600 %>
+<% if @caf_amount >=600 %>
     <p><h1> You reached your limit!</h1></p>
     <h1 class = small ><i class="far fa-frown-open"></i></h1>
     
     <h1>You are set for the day!</h1>
 
-<% elsif <% @caf_amount%> =<600 && >= 500 >%>
+<% elsif @caf_amount <=600 && @caf_amount >= 500 %>
     <p> <h1>You drank too much coffee today!</h1></p>
     <h1 class = small ><i class="far fa-dizzy"></i></h1>
     
     <h1>Take some rest!</h1>
     
-<% else <% @caf_amount%> =<500 && >=300 %>
+<% elsif @caf_amount <=500 && @caf_amount >=300 %>
     <p> <h1>You are doing ok!</h1></p>
     <h1  class = small ><i class="far fa-smile-beam"></i></h1>
     
     <h1>You can have another coffee!</h1>
     
-<% else <% @caf_amount%> =< =<300 %>
+<% else @caf_amount <= 300 %>
     <p> <h1>You are doing great!</h1></p>
     <h1  class = small ><i class="far fa-smile-beam"></i></h1>
     
