--- a/app/views/form_templates/calc_caffeine.html.erb
+++ b/app/views/form_templates/calc_caffeine.html.erb
@@ -50,15 +50,15 @@
     </select>
 </form>
 
-<form action= "/calcresult/:coffee_chain/:size/:drink"><h2><p>Calculate consumption: </p></h2> 
+<form action= "/calcresult"><h2><p>Calculate consumption: </p></h2> 
     <label for="chain">Enter a coffee chain</label>
     <input id= "chain" type= "text" name= "coffee_chain"> 
     
     <label for="size">Enter a size of drink</label>
-    <input id= "size" type= "text" name= "size of drink"> 
+    <input id= "size" type= "text" name= "size_of_drink"> 
 
     <label for="drink">Enter a type of drink</label>
-    <input id= "drink" type= "text" name= "type of drink"> 
+    <input id= "drink" type= "text" name= "type_of_drink"> 
 
     <button>Record Consumption</button></p>
 <p><form>
