--- a/app/views/favorite_templates/index.html.erb
+++ b/app/views/favorite_templates/index.html.erb
@@ -56,7 +56,7 @@
         </td>
 
         <td>
-          <%= favorite.coffee_chain_id %>
+          <%= favorite.coffee_chain %>
         </td>
 
         <td>
