--- a/app/views/favorite_templates/show.html.erb
+++ b/app/views/favorite_templates/show.html.erb
@@ -29,7 +29,7 @@
         Coffee chain
       </dt>
       <dd>
-        <%= @favorite.coffee_chain_id %>
+        <%= @favorite.coffee_chain %>
       </dd>
 
       <dt>
