--- a/app/views/form_templates/calc_caffeine.html.erb
+++ b/app/views/form_templates/calc_caffeine.html.erb
@@ -1,3 +1,8 @@
+<html> 
+<head> <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"></head>
+
+<body>
+
 <h1> Caffeine Intake Calculation</h1>
 
 <form><h2><p> Consult current options:</p></h2>
@@ -66,3 +71,5 @@
 </form>
 
 <a href="https://www.google.com"> Go search Google</a>
+
+</body>
