--- a/app/views/favorite_templates/edit_form.html.erb
+++ b/app/views/favorite_templates/edit_form.html.erb
@@ -7,11 +7,11 @@
 <form action="/update_favorite/<%= @favorite.id %>" method="post">
 
   <div class="form-group">
-    <label for="coffee_chain_id">
+    <label for="coffee_chain">
       Coffee chain
     </label>
 
-    <input type="text" id="coffee_chain_id" name="coffee_chain_id" class="form-control" value="<%= @favorite.coffee_chain_id %>">
+    <input type="text" id="coffee_chain" name="coffee_chain" class="form-control" value="<%= @favorite.coffee_chain %>">
   </div>
 
   <div class="form-group">
