--- a/app/views/favorite_templates/new_form_with_errors.html.erb
+++ b/app/views/favorite_templates/new_form_with_errors.html.erb
@@ -19,11 +19,11 @@
 <form action="/create_favorite" method="post">
 
   <div class="form-group">
-    <label for="coffee_chain_id">
+    <label for="coffee_chain">
       Coffee chain
     </label>
 
-    <input type="text" id="coffee_chain_id" name="coffee_chain_id" class="form-control" value="<%= @favorite.coffee_chain_id %>">
+    <input type="text" id="coffee_chain" name="coffee_chain" class="form-control" value="<%= @favorite.coffee_chain %>">
   </div>
 
   <div class="form-group">
