--- a/app/views/first_page_templates/index.html.erb
+++ b/app/views/first_page_templates/index.html.erb
@@ -1,9 +1,15 @@
 <html> 
 <head> <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"></head>
 
-
-<body>  
 <div><h1>Welcome to the Coffee Consumption Tracker App!</h1></div>
+<body>  
+<nav>
+  <ul>
+    <li><a href="/drinks">View Drinks</a></li>
+    <li><a href="/favorites">View Favorites</a></li>
+    <li><a href="/caffeine_servings">View Caffeine Servings</a></li>
+  </ul>
+</nav>
 
 <img src="https://media.istockphoto.com/photos/aerial-view-of-various-coffee-picture-id938993594?k=6&m=938993594&s=612x612&w=0&h=AMuuDGZ4EHwB0OhL8sJ4WNGbz98wZX1NOg5ZLdxSv9E=">
 
