--- a/app/views/first_page_templates/index.html.erb
+++ b/app/views/first_page_templates/index.html.erb
@@ -8,6 +8,7 @@
     <li><a href="/drinks">View Drinks</a></li>
     <li><a href="/favorites">View Favorites</a></li>
     <li><a href="/caffeine_servings">View Caffeine Servings</a></li>
+    <li><a href="/calccaffeine">View Register a Consumption</a></li>
   </ul>
 </nav>
 
