--- a/app/views/favorite_templates/index.html.erb
+++ b/app/views/favorite_templates/index.html.erb
@@ -1,8 +1,6 @@
 <div class="row mb-3">
   <div class="col-md-12">
-    <h1>
-      All favorites
-    </h1>
+    <%= render("favorite_templates/fav_heading.html.erb") %>
 
     <a href="/favorites/new" class="btn btn-block btn-outline-secondary">
       Add a new favorite
