--- a/app/views/result_templates/calc_result.html.erb
+++ b/app/views/result_templates/calc_result.html.erb
@@ -6,7 +6,7 @@
 <h1> Calculation Results </h1>
 <h1><%= @daily_amount.inspect%></h1>
 
-<div><p> You have consumed a <%= @drink_type%> from <%= @coffee_chain%> of <%= @size%> size, which has <%= @caf_amount%> So have consumed <%= %> in total caffeine milligrams </p></div>
+<div><p> You have consumed a <%= @drink_type%> from <%= @coffee_chain%> of <%= @size%> size, which has <%= @caf_amount%> So have consumed <%= @daily_amount%> in total caffeine milligrams </p></div>
 
 <% if @caf_amount >=600 %>
     <p><h3> You reached your limit!</h3></p>
