--- a/app/views/caffeine_serving_templates/new_form.html.erb
+++ b/app/views/caffeine_serving_templates/new_form.html.erb
@@ -4,16 +4,7 @@
 
 
 <hr>
-
 <form action="/create_caffeine_serving" method="post">
-
-  <div class="form-group">
-    <label for="caffeine_amount">
-      Caffeine amount
-    </label>
-
-    <input type="text" id="caffeine_amount" name="caffeine_amount" class="form-control">
-  </div>
 
   <div class="form-group">
     <label for="coffee_chain">
@@ -21,6 +12,14 @@
     </label>
 
     <input type="text" id="coffee_chain" name="coffee_chain" class="form-control">
+  </div>
+
+  <div class="form-group">
+    <label for="size">
+      Size
+    </label>
+
+    <input type="text" id="size" name="caffeine_amount" class="form-control">
   </div>
 
   <div class="form-group">
