--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,76 @@
   </head>
 
   <body>
-    # nav bar 
+    <nav>
+      <div>
+        <a href="">
+          <i class="fab fa-firstdraft fa-fw"></i>
+
+          Home
+        </a>
+      </div>
+
+      <div>
+        <a href="/drinks">
+          <i class="fas fa-plus fa-fw"></i>
+
+          View Drinks
+        </a>
+      </div>
+
+      <div>
+        <a href="/favorites">
+          <i class="fas fa-clock fa-fw"></i>
+
+          View Favorites
+        </a>
+      </div>
+
+      <div>
+        <a href="/caffeine_servings">
+          <i class="fas fa-fire fa-fw"></i>
+
+          Caffeine Servings
+        </a>
+      </div>
+      
+      <div>
+        <a href="/calccaffeine">
+          <i class="fas fa-fire fa-fw"></i>
+
+          View Register a Consumption
+        </a>
+      </div>
+    
+
+      <hr>
+
+      <% if current_user.blank? %>
+        <div>
+          <a href="/users/sign_in">
+            Sign in
+          </a>
+        </div>
+
+        <div>
+          <a href="/users/sign_up">
+            Sign up
+          </a>
+        </div>
+      <% else %>
+        <div>
+          <a href="/users/edit">
+            Edit profile
+          </a>
+        </div>
+
+        <div>
+          <a href="/users/sign_out" data-method="delete">
+            Sign out
+          </a>
+        </div>
+      <% end %>
+    </nav>
     <%= yield %>
 
     <%= dev_tools if Rails.env.development? %>
