--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
   <body>
     <nav>
       <div>
-        <a href="">
+        <a href="https://final-project-adriana-adrianabrito.c9users.io/">
           <i class="fab fa-firstdraft fa-fw"></i>
 
           Home
