--- a/app/views/result_templates/calc_result.html.erb
+++ b/app/views/result_templates/calc_result.html.erb
@@ -5,32 +5,31 @@
 <body>
 <h1> Calculation Results </h1>
 
-<div><p> You have consumed a <%= @drink_type%> from <%= @coffee_chain%> of <%= @size%> size, which has <%= @caf_amount%> So have consumed <%= @daily_amount%> in total caffeine milligrams </p></div>
+<div><p> You have consumed a <%= @drink_type%> from <%= @coffee_chain%> of <%= @size%> size, which has <%= @caf_amount%> caffeine milligrams. </div>
+<div> You have consumed <%= @daily_amount%> caffeine milligrams in total. </p></div>
 
-<% if @caf_amount >=600 %>
+<% if @daily_amount >=600 %>
     <p><h3> You reached your limit!</h3></p>
     <h1 class = big ><i class="far fa-frown-open"></i></h1>
     
     <h1>You are set for the day!</h1>
 
-<% elsif @caf_amount <=600 && @caf_amount >= 500 %>
+<% elsif @daily_amount <=600 && @daily_amount >= 500 %>
     <p> <h3>You drank too much coffee today!</h3></p>
     <h1 class = big ><i class="far fa-dizzy"></i></h1>
     
-    <h3>Take some rest!</h3>
+    <h3>Be careful. You are reaching the recommended limit!</h3>
     
-<% elsif @caf_amount <=500 && @caf_amount >=300 %>
+<% elsif @daily_amount <=500 && @daily_amount >=300 %>
     <p> <h3>You are doing ok!</h3></p>
     <h1  class = big ><i class="far fa-smile-beam"></i></h1>
     
-    <h3>You can have another coffee!</h3>
+    <h3>You can have another one ot two more coffees!</h3>
     
-<% else @caf_amount < 300 %>
+<% else @daily_amount < 300 %>
     <p> <h3>You are doing great!</h3></p>
     <h1  class = big ><i class="far fa-smile-beam"></i></h1>
     
     <h3>You can have a coffee today!</h3>
     <% end%>
 </body>
-
-<div><a href="https://final-project-adriana-adrianabrito.c9users.io/calccaffeine?coffee_chain=1&size=1&drink=1"> Introduce new input</a></div>
