--- a/app/views/favorite_templates/index.html.erb
+++ b/app/views/favorite_templates/index.html.erb
@@ -1,6 +1,16 @@
-<div class="row mb-3">
+<html> 
+<head> <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"></head>
+
+
+<body>
   <div class="col-md-12">
     <%= render("favorite_templates/fav_heading.html.erb") %>
+
+  <div><i class="fas fa-crown"></i> Below is a list of all your top drinks:
+  </div>
+</div>
+<hr>
+
 
     <a href="/favorites/new" class="btn btn-block btn-outline-secondary">
       Add a new favorite
@@ -8,17 +18,10 @@
   </div>
 </div>
 
-
-<hr>
-
 <div class="row mb-3">
   <div class="col-md-12">
     <table class="table">
       <tr>
-        <th>
-          ID
-        </th>
-
         <th>
           Coffee chain
         </th>
@@ -31,27 +34,10 @@
           Drinks
         </th>
 
-        <th>
-          User
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
       </tr>
 
       <% @favorites.each do |favorite| %>
       <tr>
-        <td>
-          <%= favorite.id %>
-        </td>
 
         <td>
           <%= favorite.coffee_chain %>
@@ -59,21 +45,6 @@
 
         <td>
           <%= favorite.size %>
-        </td>
-
-        <td>
-          <%= favorite.drinks_id %>
-        </td>
-
-        <td>
-          <%= favorite.user_id %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(favorite.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(favorite.updated_at) %> ago
         </td>
 
         <td>
