--- a/app/views/drink_templates/new_form.html.erb
+++ b/app/views/drink_templates/new_form.html.erb
@@ -2,9 +2,7 @@
   Add a new drink
 </h1>
 
-
 <hr>
-
 <form action="/create_drink" method="post">
 
   <div class="form-group">
@@ -42,6 +40,8 @@
   <button class="btn btn-block btn-outline-secondary">
     Create drink
   </button>
+  
+  <a href="/drinks"> Go back </a>
 </form>
 
 <hr>
@@ -93,6 +93,4 @@
     </div>
 </form>
 
-<a href="/drinks">
-  Go back
-</a>
+
