--- a/app/views/favorite_templates/index.html.erb
+++ b/app/views/favorite_templates/index.html.erb
@@ -34,7 +34,7 @@
         </th>
 
         <th>
-          Drinks
+          Drinks ID
         </th>
 
       </tr>
@@ -51,6 +51,10 @@
 
         <td>
           <%= favorite.size %>
+        </td>
+        
+        <td>
+          <%= favorite.drinks_id %>
         </td>
 
         <td>
