--- a/app/views/favorite_templates/new_form.html.erb
+++ b/app/views/favorite_templates/new_form.html.erb
@@ -25,7 +25,7 @@
 
   <div class="form-group">
     <label for="drinks_id">
-      Drinks
+      Drink type
     </label>
 
     <input type="text" id="drinks_id" name="drinks_id" class="form-control">
