--- a/app/views/favorite_templates/new_form_with_errors.html.erb
+++ b/app/views/favorite_templates/new_form_with_errors.html.erb
@@ -36,7 +36,7 @@
 
   <div class="form-group">
     <label for="drinks_id">
-      Drinks
+      Drinks ID
     </label>
 
     <input type="text" id="drinks_id" name="drinks_id" class="form-control" value="<%= @favorite.drinks_id %>">
