--- a/app/views/favorite_templates/index.html.erb
+++ b/app/views/favorite_templates/index.html.erb
@@ -32,11 +32,10 @@
         <th>
           Size
         </th>
-
+        
         <th>
-          Drinks ID
+          Type of Drink
         </th>
-
       </tr>
 
       <% @favorites.each do |favorite| %>
@@ -54,7 +53,7 @@
         </td>
         
         <td>
-          <%= favorite.drinks_id %>
+          <%= favorite.type_of_drink %>
         </td>
 
         <td>
