--- a/app/views/favorite_templates/new_form.html.erb
+++ b/app/views/favorite_templates/new_form.html.erb
@@ -22,13 +22,13 @@
 
     <input type="text" id="size" name="size" class="form-control">
   </div>
-
+  
   <div class="form-group">
-    <label for="drinks_id">
-      Drink type
+    <label for="type_of_drink">
+      Type of Drink
     </label>
 
-    <input type="text" id="drinks_id" name="drinks_id" class="form-control">
+    <input type="text" id="type_of_drink" name="type_of_drink" class="form-control">
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
