--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,13 @@
           View Register a Consumption
         </a>
       </div>
-    
+      <div>
+        <a href="/users">
+          <i class="fas fa-users"></i>
+
+          User
+        </a>
+      </div>
 
       <hr>
 
