--- a/app/views/caffeine_serving_templates/index.html.erb
+++ b/app/views/caffeine_serving_templates/index.html.erb
@@ -28,6 +28,14 @@
         <th>
           Coffee chain
         </th>
+        
+        <th>
+          Type of Drink
+        </th>
+        
+        <th>
+          Size
+        </th>
 
         <th>
           Created at
@@ -38,7 +46,7 @@
         </th>
       </tr>
 
-      <% @caffeine_servings.each do |caffeine_serving| %>
+      <% @caffeine_servings.where({:id => current_user.id}).each do |caffeine_serving| %>
       <tr>
         <td>
           <%= caffeine_serving.id %>
@@ -50,6 +58,12 @@
 
         <td>
           <%= caffeine_serving.coffee_chain %>
+        </td>
+        <td>
+          <%= caffeine_serving.type_of_drink %>
+        </td>
+        <td>
+          <%= caffeine_serving.size %>
         </td>
 
         <td>
