--- a/app/views/caffeine_serving_templates/edit_form.html.erb
+++ b/app/views/caffeine_serving_templates/edit_form.html.erb
@@ -23,16 +23,16 @@
   </div>
 
   <div class="form-group">
-    <label for="user_id">
-      User
+    <label for="type_od_drink">
+      Type of Drink
     </label>
 
     <input type="text" id="user_id" name="user_id" class="form-control" value="<%= @caffeine_serving.user_id %>">
   </div>
 
   <div class="form-group">
-    <label for="drinks_id">
-      Drinks
+    <label for="size">
+      Size
     </label>
 
     <input type="text" id="drinks_id" name="drinks_id" class="form-control" value="<%= @caffeine_serving.drinks_id %>">
