--- a/app/views/caffeine_serving_templates/edit_form_with_errors.html.erb
+++ b/app/views/caffeine_serving_templates/edit_form_with_errors.html.erb
@@ -39,8 +39,8 @@
   </div>
 
   <div class="form-group">
-    <label for="drinks_id">
-      Drinks
+    <label for="size">
+      Size
     </label>
 
     <input type="text" id="drinks_id" name="drinks_id" class="form-control" value="<%= @caffeine_serving.drinks_id %>">
