--- a/app/views/caffeine_serving_templates/show.html.erb
+++ b/app/views/caffeine_serving_templates/show.html.erb
@@ -47,10 +47,17 @@
       </dd>
 
       <dt>
-        Drinks
+        Type of Drink
       </dt>
       <dd>
-        <%= @caffeine_serving.drinks_id %>
+        <%= @caffeine_serving.type_of_drink %>
+      </dd>
+      
+      <dt>
+        Size
+      </dt>
+      <dd>
+        <%= @caffeine_serving.size %>
       </dd>
 
       <dt>
