--- a/app/views/favorite_templates/edit_form.html.erb
+++ b/app/views/favorite_templates/edit_form.html.erb
@@ -23,19 +23,11 @@
   </div>
 
   <div class="form-group">
-    <label for="drinks_id">
-      Drinks ID
+    <label for="type_of_drink">
+      Type of Drink
     </label>
 
-    <input type="text" id="drinks_id" name="drinks_id" class="form-control" value="<%= @favorite.drinks_id %>">
-  </div>
-
-  <div class="form-group">
-    <label for="user_id">
-      User
-    </label>
-
-    <input type="text" id="user_id" name="user_id" class="form-control" value="<%= @favorite.user_id %>">
+    <input type="text" id="type_of_drink" name="type_of_drink" class="form-control" value="<%= @favorite.type_of_drink %>">
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
