--- a/app/views/favorite_templates/show.html.erb
+++ b/app/views/favorite_templates/show.html.erb
@@ -40,10 +40,10 @@
       </dd>
 
       <dt>
-        Drinks ID
+        Type of Drink
       </dt>
       <dd>
-        <%= @favorite.drinks_id %>
+        <%= @favorite.type_of_drink %>
       </dd>
 
       <dt>
