--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
         <a href="/calccaffeine">
           <i class="fas fa-fire fa-fw"></i>
 
-          View Register a Consumption
+          Register a Consumption
         </a>
       </div>
       <div>
