--- a/app/views/user_templates/index.html.erb
+++ b/app/views/user_templates/index.html.erb
@@ -1,9 +1,13 @@
+<html> 
+<head> <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"></head>
+
 <h3>
  User #<%= current_user.id %> Information
 </h3>
 
+<body> 
 <table>
-  <tr>
+  <tr><i class="fas fa-users-cog"></i>
     NAME
     </tr>
   <tr>
@@ -39,5 +43,5 @@
    </a>
  </div>
 </div>
-
+</body></html>
   
