--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,8 +66,9 @@
           Register a Consumption
         </a>
       </div>
+      
       <div>
-        <a href="/users">
+        <a href="/users/:id">
           <i class="fas fa-users"></i>
 
           User
