--- a/app/views/user_templates/index.html.erb
+++ b/app/views/user_templates/index.html.erb
@@ -1,14 +1,14 @@
 <html> 
 <head> <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"></head>
 
+<body> 
 <h3>
  User #<%= current_user.id %> Information
 </h3>
 
-<body> 
 <table>
   <tr><i class="fas fa-users-cog"></i>
-    NAME
+    Name:
     </tr>
   <tr>
     <%= current_user.name %>
@@ -17,7 +17,7 @@
 
 <table>
   <tr>
-    JOINED
+    Joined:
     </tr>
     <tr>
     <%= time_ago_in_words(current_user.created_at) %>
@@ -43,5 +43,24 @@
    </a>
  </div>
 </div>
-</body></html>
+</body>
+</html>
   
+<table>
+ <tr>
+   <th>Id</th>
+   <th>Caffeine amount</th>
+   <th>Coffee chain </th>
+   <th>Type of drink </th>
+   <th>Size</th>
+   <th></th>
+ </tr>
+
+<% @user_intake.each do |user| %>
+ <tr>
+   <td>
+     <%= user.id %>
+   </td>
+ <% end %> 
+ 
+ </body>
