--- a/app/views/favorite_templates/index.html.erb
+++ b/app/views/favorite_templates/index.html.erb
@@ -38,7 +38,7 @@
         </th>
       </tr>
 
-      <% @favorites.each do |favorite| %>
+      <% @favorites_user.each do |favorite| %>
       <tr>
         <td>
           <%= favorite.id %>
